Fix z-index

--- a/css/root.css
+++ b/css/root.css
@@ -609,7 +609,7 @@ pre code {
 		left:0;
 		height: 60px;
 		width: 100%;
-		z-index: 9997;
+		z-index: 9980;
 	}
 
 	.menu-main-navigation-menu-container ul {
@@ -649,7 +649,7 @@ pre code {
 		width: 100%;
 		margin-top: 60px;
 		border-bottom: 0px solid #e1e8ed;
-		z-index: 9998;
+		z-index: 9990;
 		-webkit-box-shadow: 0px -1px 11px 0px rgba(189,189,189,0.66);
 		-moz-box-shadow: 0px -1px 11px 0px rgba(189,189,189,0.66);
 		box-shadow: 0px -1px 11px 0px rgba(189,189,189,0.66);
@@ -676,6 +676,7 @@ pre code {
 		top: 200;
 		padding-top: 280px;
 		width: 208px;
+		z-index: 9990;
 	}
 	
 	.bio {
